--- a/ATTPC_Classify_update.ipynb
+++ b/ATTPC_Classify_update.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = data[0:1600]\n",
+    "train_data = data[0:1600]  # can use train test split function from skilearn for this task \n",
     "test_data = data[1601:2000]\n",
     "train_label = label[0:1600]\n",
     "test_label = label[1601:2000]"
@@ -552,7 +552,6 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "#from sklearn.metrics import plot_confusion_matrix\n",
     "import itertools"
    ]
   },
