--- a/Downsampling.ipynb
+++ b/Downsampling.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Image labels: 1 for beam only, 2 for beam and track\n",
+    "#Image labels: 1 for other only, 2 for event\n",
     "count = []\n",
     "for i in range(2000):\n",
     "    if i == 0:\n",
